[package]
name = "tiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3"
serde = "1.0.186"



[dependencies.mongodb]
version = "2.6.1"
features = ["tokio-sync"]

[dependencies.bson]
version = "2.6.1"
features = ["serde_with"]
